# TripMind

./: .dockerignore  .gitignore  .replit  DEPLOYMENT_CHECKLIST.md  Dockerfile  Makefile  README.md  build.sh  database.py  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json  replit.md  requirements.txt  travel_planner.db
.local/state/replit/agent/: .latest.json  progress_tracker.md
.local/state/replit/agent/filesystem/: filesystem_state.json
agent/: travel_agent.py
attached_assets/: content-1762635480469.md
static/: app.js  auth-styles.css  booking-styles.css  calendar-dynamic.css  calendar-styles.css  index.html  plan-trip-styles.css  styles.css
