[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.0",
    "langchain>=1.0.5",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.0.1",
    "langchain-groq>=1.0.0",
    "langchain-openai>=1.0.2",
    "openai>=2.7.1",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
]
